--- a/Homeworks/CSS/03.CSSLayout/01.ThreeView/index.html
+++ b/Homeworks/CSS/03.CSSLayout/01.ThreeView/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Three view</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Dropdown</title>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
-    <ul>
-        <li>List item</li>
-        <li>List item</li>
-        <li>List item</li>
-        <li>List item</li>
-    </ul>
+<ul>
+    <li>
+        <a href="#">List item</a>
+        <ul>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+        </ul>
+    </li>
+
+    <li>
+        <a href="#">List item</a>
+        <ul>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+        </ul>
+    </li>
+
+    <li>
+        <a href="#">List item</a>
+        <ul>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+        </ul>
+    </li>
+
+    <li>
+        <a href="#">List item</a>
+        <ul>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+            <li><a href="#">Sublist Item</a></li>
+        </ul>
+    </li>
+</ul>
 </body>
 </html>
